# quick-xml

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Changelog.md  README.md
.github/workflows/: bench.yml  cifuzz.yml  rust.yml
benches/: bench.rs  compare_sync_async.rs  macrobenches.rs  microbenches.rs  rustyxml.rs  xmlrs.rs
compare/: Cargo.toml  README.md
compare/benches/: bench-serde.rs  bench.rs  low-level.rs  serde.rs
examples/: custom_entities.rs  flattened_enum.rs  issue68.rs  nested_readers.rs  read_buffered.rs  read_nodes.rs  read_nodes_serde.rs  read_texts.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs  structured_roundtrip.rs
fuzz/fuzzers/: fuzzer_script_1.rs
quick-dtd/: Cargo.toml  LICENSE-MIT.md
quick-dtd/src/: comment.rs  dtd.rs  lib.rs  pi.rs  quoted.rs
quick-dtd/tests/: example.dtd
quick-xml-derived/: Cargo.toml
quick-xml-derived/q_meta/: Cargo.toml
quick-xml-derived/q_meta/src/: lib.rs
quick-xml-derived/src/: lib.rs  quick_xml_derive.rs
quick-xml-derived/tests/: tests.rs
quick-xml-derived/tests/expand/: namespaced_struct.expanded.rs  namespaced_struct.rs
quick-xml-derived/tests/try_build_tests/: example.rs
src/: attributes.rs  crypto.rs  decoded.rs  dom.rs  encoding.rs  error.rs  errors.rs  escape.rs  escapei.rs  lib.rs  name.rs  namespace.rs  reader.rs  serde_helpers.rs  test.rs  utils.rs  writer.rs
src/de/: attributes.rs  byte_buf.rs  errors.rs  escape.rs  key.rs  map.rs  mod.rs  resolver.rs  seq.rs  simple_type.rs  text.rs  var.rs
src/events/: attributes.rs  mod.rs
src/parser/: bom.rs  cdata.rs  comment.rs  dtd.rs  element.rs  mod.rs  pi.rs
src/reader/: async_reader.rs  async_tokio.rs  asynchronous.rs  attributes.rs  buffered_reader.rs  bytes.rs  element.rs  io_reader.rs  mod.rs  namespace.rs  ns_reader.rs  old.rs  parser.rs  pi.rs  slice_reader.rs  state.rs  sync.rs
src/se/: append_attributes.rs  cdata.rs  content.rs  element.rs  io.rs  key.rs  mod.rs  simple_type.rs  text.rs  var.rs
src/se/io/: content.rs  element.rs  simple_type.rs  text.rs
src/writer/: async_tokio.rs
test-gen/: Cargo.toml
test-gen/src/: main.rs
tests/: README.md  async-tokio.rs  async_test.rs  aws_test.rs  crypto.rs  encodings.rs  escape.rs  fuzzing.rs  html.rs  issues.rs  namespaces.rs  reader-attributes.rs  reader-config.rs  reader-dtd.rs  reader-errors.rs  reader-namespaces.rs  reader-references.rs  reader.rs  roundtrip.rs  sample_rss.xml  serde-de-enum.rs  serde-de-seq.rs  serde-de-xsi.rs  serde-de.rs  serde-issues.rs  serde-migrated.rs  serde-namespace-se.rs  serde-se.rs  serde_attrs.rs  serde_rename_roundtrip.rs  serde_roundtrip.rs  serde_structs.rs  test.rs  test_async.rs  unit_tests.rs  unit_tests_async.rs  writer-indentation.rs  writer.rs  xmlrs_reader_tests.rs
tests/documents/: document.xml  html5-windows.txt  html5.html  html5.txt  libreoffice_document.fodt  linescore.xml  opennews_all.rss  players.xml  rpm_filelists.xml  rpm_other.xml  rpm_primary.xml  rpm_primary2.xml  sample_1.xml  sample_1_full.txt  sample_1_short.txt  sample_1_with_bom.xml  sample_2_full.txt  sample_2_short.txt  sample_3_full.txt  sample_3_short.txt  sample_4_full.txt  sample_4_short.txt  sample_5_full.txt  sample_5_short.txt  sample_5_utf16bom.xml  sample_ns.xml  sample_ns_short.txt  test_writer.xml  test_writer_indent.xml  test_writer_indent_cdata.xml  utf16.xml
tests/documents/encoding/: Big5.xml  EUC-JP.xml  EUC-KR.xml  GBK.xml  IBM866.xml  ISO-2022-JP.xml  ISO-8859-10.xml  ISO-8859-13.xml  ISO-8859-14.xml  ISO-8859-15.xml  ISO-8859-16.xml  ISO-8859-2.xml  ISO-8859-3.xml  ISO-8859-4.xml  ISO-8859-5.xml  ISO-8859-6.xml  ISO-8859-7.xml  ISO-8859-8-I.xml  ISO-8859-8.xml  KOI8-R.xml  KOI8-U.xml  Shift_JIS.xml  gb18030.xml  macintosh.xml  utf16be-bom.xml  utf16be.xml  utf16le-bom.xml  utf16le.xml  utf8-bom.xml  utf8.txt  utf8.xml  windows-1250.xml  windows-1251.xml  windows-1252.xml  windows-1253.xml  windows-1254.xml  windows-1255.xml  windows-1256.xml  windows-1257.xml  windows-1258.xml  (+3 more)
tests/helpers/: mod.rs
tests/serde_helpers/: mod.rs
