[package]
name = "compare"
version = "0.1.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
markup5ever = "0.16"
# maybe_xml 0.11 regressed perfomance by x2, and because this was the fastest
# XML parser, we keep benchmarking version 0.10 as well
maybe_xml_0_10 = { version = "0.10", package = "maybe_xml" }
maybe_xml = "0.11"
quick-xml = { path = "..", features = ["serialize"] }
rapid-xml = "0.2"
rusty_xml = { version = "0.3", package = "RustyXML" }
serde-xml-rs = "0.8"
xml_oxide = "0.3"
xml-rs = "0.8"
xml5ever = "0.22"
xmlparser = "0.13"
# Do not use "derive" feature, because it slowdown compilation
# See https://github.com/serde-rs/serde/pull/2588
serde = "1.0"
serde_derive = "1.0"
pretty_assertions = "1.4"

[[bench]]
name = "bench"
harness = false
