[package]
name = "quick_xml_derived"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }
serde = { version = "1.0", optional = true }
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
macrotest = "1.0.9"
q_meta = { path = "q_meta"}
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
proc-macro = true
